STABLE/awx-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: awx-web
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    targetPort: 8052
  selector:
    app: awx
    role: web
